modifications to make iotracah persist to a database.